<resources>
    <string name="app_name">diploma</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="empty_list_text">There are no abstracts yet</string>
    <string name="bs_web_page">Web-page</string>
    <string name="bs_txt_file">Txt-file</string>
    <string name="bs_pdf_file">Pdf-file</string>
    <string name="bs_doc">Doc/Docx</string>
    <string name="bs_drive">Google Drive</string>
    <string name="bs_title">New abstract of</string>
    <string name="bs_clipboard">Clipboard</string>
    <string name="dialog_link_hint">Put URL here…</string>
    <string name="dialog_link_title">Enter URL to the page</string>
    <string name="detail_upload_snackbar">Get abstract from this text?</string>

    <string name="menu_three_vertical_points">&#8942;</string>
</resources>
