<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:padding="16dp"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.main_operation.activities.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_sheet_title"
        android:paddingBottom="20dp"
        style="@android:style/TextAppearance.DialogWindowTitle"
        android:textColor="@color/bottom_sheet_title"
        android:text="@string/bs_title"
        android:textSize="19sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bs_link"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_title"
        app:layout_constraintHorizontal_bias="0">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/link_icon"
            android:src="@drawable/ic_link"
            app:layout_constraintLeft_toLeftOf="@id/link_text"
            app:layout_constraintRight_toRightOf="@id/link_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/link_text"
            android:paddingTop="16dp"
            android:textSize="12sp"
            android:textColor="@android:color/tertiary_text_light"
            android:text="@string/bs_web_page"
            app:layout_constraintTop_toBottomOf="@id/link_icon"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bs_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_title"
        app:layout_constraintHorizontal_bias="0.5">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/txt_icon"
            android:src="@drawable/ic_txt_file"
            app:layout_constraintLeft_toLeftOf="@id/txt_file_text"
            app:layout_constraintRight_toRightOf="@id/txt_file_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_file_text"
            android:paddingTop="16dp"
            android:textSize="12sp"
            android:textColor="@android:color/tertiary_text_light"
            android:text="@string/bs_txt_file"
            app:layout_constraintTop_toBottomOf="@id/txt_icon"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bs_clipboard"
        android:layout_marginEnd="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_title"
        app:layout_constraintHorizontal_bias="1">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/clipboard_icon"
            android:src="@drawable/ic_clipboard"
            app:layout_constraintLeft_toLeftOf="@id/txt_clipboard"
            app:layout_constraintRight_toRightOf="@id/txt_clipboard"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_clipboard"
            android:paddingTop="16dp"
            android:textSize="12sp"
            android:textColor="@android:color/tertiary_text_light"
            android:text="@string/bs_clipboard"
            app:layout_constraintTop_toBottomOf="@id/clipboard_icon"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:id="@+id/bs_pdf"
        app:layout_constraintLeft_toLeftOf="@id/bs_link"
        app:layout_constraintRight_toRightOf="@id/bs_link"
        app:layout_constraintTop_toBottomOf="@id/bs_link">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/pdf_icon"
            android:src="@drawable/ic_pdf_file"
            app:layout_constraintLeft_toLeftOf="@id/pdf_text"
            app:layout_constraintRight_toRightOf="@id/pdf_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pdf_text"
            android:paddingTop="16dp"
            android:textSize="12sp"
            android:textColor="@android:color/tertiary_text_light"
            android:text="@string/bs_pdf_file"
            app:layout_constraintTop_toBottomOf="@id/pdf_icon"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:id="@+id/bs_doc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bs_link">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/doc_icon"
            android:src="@drawable/ic_doc_x_file"
            app:layout_constraintLeft_toLeftOf="@id/doc_text"
            app:layout_constraintRight_toRightOf="@id/doc_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/doc_text"
            android:paddingTop="16dp"
            android:textSize="12sp"
            android:textColor="@android:color/tertiary_text_light"
            android:text="@string/bs_doc"
            app:layout_constraintTop_toBottomOf="@id/doc_icon"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:id="@+id/bs_drive"
        app:layout_constraintLeft_toLeftOf="@id/bs_clipboard"
        app:layout_constraintRight_toRightOf="@id/bs_clipboard"
        app:layout_constraintTop_toBottomOf="@id/bs_link">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/drive_icon"
            android:src="@drawable/ic_google_drive"
            app:layout_constraintLeft_toLeftOf="@id/drive_text"
            app:layout_constraintRight_toRightOf="@id/drive_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/drive_text"
            android:paddingTop="16dp"
            android:textSize="12sp"
            android:textColor="@android:color/tertiary_text_light"
            android:text="@string/bs_drive"
            app:layout_constraintTop_toBottomOf="@id/drive_icon"/>

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>